<resources>
    <string name="app_name">MyAndroidMulti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_name">Call SOS</string>
    <string name="answer_one">You selected Answer One</string>
    <string name="answer_two">You selected Answer Two</string>
    <string name="button_submit">Submit</string>
    <string name="Radio_question1">Do you have fever?</string>
    <string name="Radio_question2">Are you injured?</string>
    <string name="text_question">Please select the following options</string>
    <string name="button_next">Next</string>
    <string name="button_tryagain">Try Again</string>
    <string name="about_text">About the App Designer</string>
    <string name="about_title">About</string>
    <string name="drawone_menu">Draw Item One</string>
    <string name="drawone_text">You Selected Draw One</string>
    <string name="input_yourname">Enter your name</string>
    <string name="image_sos">SOS Image</string>
    <string name="text_enterphonenumber">Enter your phone number</string>
    <string name="text_riskscorelabel">Your risk score</string>
    <string name="button_getscore">Get risk score</string>
    <string name="headerviewaccountimage">Account Image</string>
    <string name="Signin">Signin</string>
    <string name="cmpe277_notification_channel_id" translatable="false">cmpe277_channel</string>
    <string name="cmpe277_notification_channel_name" translatable="true">Test alarm</string>
    <string name="cmpe277_fcm_notification_channel_id" translatable="false">cmpe277_fcm_channel</string>
    <string name="cmpe277_fcm_notification_channel_name" translatable="true">Test fcm alarm</string>
    <string name="notification_title">Test Timer</string>
    <string name="timer_running">Test timer is running...</string>
    <string name="cmpe277_notification_channel_description">Test reminder</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="SendFirestoremessage">Send Firestore Message</string>
    <string name="capture_button">Capture</string>
    <string name="torch_button">Torch</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
</resources>
