<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/navHeader"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp">

    <ImageView
        android:id="@+id/navHeaderImage"
        android:layout_width="186dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/headerviewaccountimage"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navheadertextView"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/about_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/design_default_color_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/loginbutton"
            style="@style/FirebaseUI.Button.AccountChooser.AnonymousButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/Signin"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>



</LinearLayout>